@@ -1,27 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 DIST go-text-0_pre20150604.tar.gz 3719061 SHA256 71017417b42ea4e68ac77303782c83b627bfbceed041a1467ddc6319c78923ad SHA512 1bbc5bff271243ee31e346a79abf9dd128907cea82fa1eaba11be62780bd1f6b6b76a2ae9476fbe350224f450e75d12efcffd67521b49d6bec44ce2bb085f0d3 WHIRLPOOL e953d99d661537c8838757ae507f2adda3319ef22ce687a39533351201c5bb7206701db4b54f7c0e4d6df803b378a4f587a2015646825b4c3dfad97696baed2e
 EBUILD go-text-0_pre20150604.ebuild 1580 SHA256 527740759eaafa10915c7d77c4e7aeec820ea8058c7ff5ade59bbbec24197b76 SHA512 090fa79eb00357eacba5cf5cb570858b52170fd7b65460db47671e645d4c22cea9c773e8b865408c2e7d7911c7b444ad9de45499c02c9acedc25e4031f73a95f WHIRLPOOL edb4bb94dcdf39bdf7821ef07cb4fa6e0897acaae7596e89aaa3dd694182082d2200b13cae1733871db4f451c74cb92d8f4c0d168eb3b76b6bbe3465a9040b5e
-EBUILD go-text-9999.ebuild 1933 SHA256 b0a540a720c09e57fe27c825695b00b1b61fe328997ef37e1f72a2143f7343b5 SHA512 29005bc11c35b87289e315444620a6781e6ad1902e72d759c8759b6c5b3517ddaa1126b9a9d6ef1f68c96e35825d6f0b00c02900e54811147a72c4e1ca42b12e WHIRLPOOL 3973b34164f150b46db222b83497861ebf3e8485a0b08d7f4017cf54837f21add49afe4cf29c227a0d401fdfb5c8a039057123ec6092c3d8cf0a588b85ff7cbd
-MISC ChangeLog 1738 SHA256 52b3bddd0fba0d3003e742c55103949a4f7be080536a185d75a27c3aa8cd7aec SHA512 5adab825df19e990fd7e3d8c38cc63cd1e89751fe460047f7409d2724ae303ef1d827ff0ca2e3ce9fae4b44e31486c44ebe54aca773c973fbf152f02c7f0333e WHIRLPOOL fec6298d4db9089e50a0850d5c991e4b8434536842007d99e751dabc1e354e64a83b8030105d6548b515410f708ccb89b2d16d336bd839c3bbe081f9dad21fac
+EBUILD go-text-9999.ebuild 1328 SHA256 e362d6356e458cb60b93fcdba4693d0ba95a8f4c560997e0e3e7631fb1990367 SHA512 b3f149c95aa761790a1d32e947360400e67fc1f97744640cdfd770faee3c762e1942ee617c09696ebb199287f0d2269d493449713b810bfd3e1398a84cf9f909 WHIRLPOOL ef5257862fee282a6ddc23d310ba14cca0518dc9815964921819983fb13408675ef06aef8a28cd7ff7e71a1434ff1f7cfc9442e7ac0556c2b5aec65bd52973f3
+MISC ChangeLog 1864 SHA256 5a7c7a11652a576aba561fcd2ba67739c7534d9e14f4c913575845583638d7d2 SHA512 4481909bcf22ebf758e9b92eaac29e0bfeaf14ed69d434d73761de6f67582231ca4b9d98bfa06e32db0fba372352bd38ef60ed41de54ff573ff9bdfd61467ed5 WHIRLPOOL 701e3d547f5460e0e273fbc0ad15c8ac92373879fe0568c13802b7f8ad75c585fa42a500ffdd05d6a3f511c86a9d4d1e32c1ceb306f2870f1aa3b6efd2763b65
 MISC metadata.xml 288 SHA256 f50dd3e254083ae729c646061b94d2f4f8ec63f61ee955038a01e98582a5763d SHA512 e8e3e81a82d631fc378a1aecf9578d0f55790b68b8b165d9d6344cd6ab857e36c2b4b35719d3351002f76e604772e6a08f7333b55521f7852625ee56234a2034 WHIRLPOOL ca8f1004aa5975906c9f1bb982d0957495431f74d4e9c0ca43da612f2cf52f80fd5c261d286b247c33f6dd8563f8c325386a495a05211f943dbc1f5430adcd47
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.1
+Version: GnuPG v2
 
-iQJ8BAEBCgBmBQJVtducXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0QUU0N0I4NzFERUI0MTJFN0EyODE0NUFF
-OTQwMkE3OUIwMzUyOUEyAAoJEOlAKnmwNSmiyCEQAKA++Bzmrw83w1WAHpw86vzS
-D6xUS2dzSioYjULUrKwIECZZGcgLgX9calqJ5q79kY2pHeHj7IRF204eVHtGCAIR
-apz3vqL7ip5cvAhnW5v2h7345Q5sosbz0jDjMcyQVeVb1ehQqLQaZGuMhjSMB/FK
-v1a0cVE6Uc612/KV62NTCQVOt+mkMuJfvJTrfhOWfKVhRuQDEVxCa8Czzqh0G3a/
-4KW9oWmNmLI+jlPlt4RUBnCZDwwJEWx0rGCDQV/nijLSaLLLazf3zNmPjKYwTgQM
-V4jiEMQ8ocNTcf992yO+HgVPTr0HB4uRlXMIurVTQOXhcSVcMlgN88hzhtkvd4R9
-HYoPrwC60IzO7O+Y20O7d/vyVY23iW2BC9rOF8rWmD+54pVWrIL8iBBXthLZvLDt
-caKD//7s2OudcY2o1nRJp+Jj2wdCHi3SZI5IUuNr0F3YQxWBhR7/s8B94rg1LBKd
-+/feVIKXChWNHPgOjUHLIvEc3zZtb1hGjAzktKb1/w3q3uGGqmPXJGv4GS7ATe8O
-FKDnpH/WopFRu4Tf0+/nEns6GOlhjpiLfBlIXyehrML8emRDdf5Gm2tJlLCh4NB/
-CfJitr9CZa/KZEo0BvD4EO/oC4/pWi4CwX8n7RTr7aA6SwnW1+D3mrVGOM/cLg5k
-Qthl9c4jVJR4YOfIez/3
-=+44J
+iEYEAREIAAYFAlXCZ8cACgkQblQW9DDEZTinuwCghfTyOITWxBRGMNsHvYn/E8dY
+x6MAoIv5mDxpfMvYpbMFKWfiE/LyIj3H
+=xkd9
 -----END PGP SIGNATURE-----
